# notes-api

./: README.md  pyproject.toml
src/: Dockerfile
src/app/api/: notes.py
src/tests/: test_notes.py
